# hamma

./: .gitignore  .kanon-ci.toml  .kanon-license-fingerprint.toml  .kanon-lint-baseline.toml  .kanon-orchestration-exceptions.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  deny.toml  flake.nix  llms.txt  osv-scanner.toml  release-please-config.json
.cargo/: audit.toml
.github/workflows/: release-please.yml  security.yml
_llm/: architecture.toml  current_state.toml  decisions.toml  glossary.toml
crates/dictyon/: Cargo.toml
crates/dictyon/examples/: connect.rs
crates/dictyon/src/: control.rs  lib.rs  noise.rs  transport.rs  wire.rs
crates/dictyon/src/control/: mod.rs  tests.rs
crates/dictyon/src/noise/: mod.rs  tests.rs
crates/dictyon/tests/: wire_integration.rs
crates/hamma-core/: Cargo.toml
crates/hamma-core/src/: config.rs  keys.rs  lib.rs  types.rs
crates/hamma-core/tests/: public_api.rs
